# Quantum-Biological-Environment-Simulator-QBES

./: .gitignore  BENCHMARK_IMPLEMENTATION_SUMMARY.md  COMPLETE_BEGINNERS_GUIDE.md  COMPLETE_USER_GUIDE.md  CONTRIBUTING.md  HOW_TO_USE_QBES.md  LICENSE  LICENSE_NOTICE.md  MANIFEST.in  PROJECT_STRUCTURE.md  QBES_COMPLETE_IMPLEMENTATION.md  QBES_FINAL_ASSESSMENT.md  README.md  SIMPLE_GUIDE.md  TASK_9_2_IMPLEMENTATION_SUMMARY.md  WEBSITE_COMPLETE.md  WEBSITE_INSTRUCTIONS.md  WHAT_IS_QBES.md  comprehensive_test_report.py  create_clean_benchmark.py  create_demo_pdb.py  create_sample_results.py  create_simple_simulation.py  demo_new_features.py  demo_qbes.py  final_launch_test.py  launch_qbes.py  my_quantum_simulation.yaml  package_final_deliverable.py  plot_results.py  pyproject.toml  pytest.ini  qbes_cli.py  qbes_interactive.py  quick_photosystem_20251023_200214.yaml  requirements.txt  requirements_web.txt  run_benchmarks.py  run_simple_simulation.py  run_tests.py  (+19 more)
configs/: default_config.yaml  photosynthesis_config.json  reference_data.json
core_test_results/: core_test_report.json  core_test_report.txt
demo_simulation_results/: detailed_analysis_report.txt  simulation_results.json  simulation_summary.txt  time_evolution_data.csv
docs/: QBES_v1.2_Final_Validation_Report.md  README.md  VERSION_HISTORY.md  VERSION_QUICK_REFERENCE.md  api_reference.md  design_rationale.md  installation.md  project-overview.md  repository-structure.md  theory.md  troubleshooting.md  tutorial.md  user_guide.md  validation_methodology.md
examples/: README.md
final_qbes_deliverable/: packaging_report.json  packaging_summary.txt  project_completion_summary.md
photosystem_output/: intermediate_results_step_0.pkl  simulation_results.pkl  simulation_summary.txt
qbes/: __init__.py  analysis.py  cli.py  config_manager.py  md_engine.py  noise_models.py  quantum_engine.py  simulation_engine.py  visualization.py  web_interface.py
qbes/core/: __init__.py  (+2 more)
scripts/: check_system.py  install_qbes.py  manage_env.py  setup_qbes.py  verify_installation.py
simulation_results/: analysis_report.txt  simulation_results.json  simulation_summary.txt  time_evolution_data.csv
tests/: README.md  __init__.py  conftest.py  test_accuracy_calculator.py  test_analysis_imports.py  test_analytical_benchmarks.py  test_autonomous_validation.py  test_benchmark_runner.py  test_benchmark_runner_methods.py  test_benchmark_systems.py  test_benchmark_systems_simple.py  test_cli.py  test_cli_validate.py  test_coherence_analysis.py  test_config_manager.py  test_data_models.py  test_debugging_loop.py  test_dry_run_mode.py  test_error_handling.py  test_fmo_benchmark.py  test_hamiltonian_construction.py  test_installation_automation.py  test_interfaces.py  test_lindblad_solver.py  test_md_engine.py  test_noise_model_factory.py  test_noise_models.py  test_physical_validation.py  test_quantum_engine_new_methods.py  test_quantum_state_operations.py  test_sanity_checks.py  test_simulation_engine.py  test_snapshot_functionality.py  test_statistical_analysis.py  test_validation_integration.py  test_validation_summary.py  test_validation_utils.py  test_visualization.py
validation_results/: validation_report.md
website/: README.md  app.py  index.html  qbes_website.html  script.js  server.py  styles.css  test_runner.py
(+96 files in other folders)
